fix: layout shift when dropdown active

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -38,6 +38,10 @@ html {
   scrollbar-gutter: stable;
 }
 
+body[style] {
+  margin-right: 0 !important;
+}
+
 .nav-link.active {
   @apply text-blue-700;
 }
